# chalkboard

./: Cargo.toml  README.md
chalkboard/: Cargo.toml
chalkboard-geometry/: Cargo.toml
chalkboard-geometry/src/: angle.rs  arc.rs  clip.rs  composite.rs  curve.rs  intensity.rs  lib.rs  outline.rs  path.rs  polygon.rs  region.rs  slope.rs  thrice.rs  trap.rs  util.rs
chalkboard/examples/: breadx_fallback.rs
chalkboard/src/: color.rs  context.rs  device.rs  draw_information.rs  error.rs  fill.rs  gradient.rs  lib.rs  pattern.rs  surface.rs  util.rs
chalkboard/src/breadx/: fallback.rs
chalkboard/src/breadx/xrender/: brushes.rs  mod.rs
chalkboard/src/device/: boxes.rs  composite.rs  image_map.rs  mod.rs  trapezoids.rs
chalkboard/src/draw_method/: image_map.rs  mod.rs  noop.rs  trapezoids.rs
chalkboard/src/gl/: functions.rs  mod.rs
chalkboard/src/gl/types/: mod.rs  point.rs  raw.rs
chalkboard/src/path/: block.rs  mod.rs
chalkboard/src/yaww/: mod.rs
examples/: breadx_fallback.rs  breadx_xrender.rs  verification_image.rs  yaww_gdi.rs
src/: blur.rs  color.rs  context.rs  ellipse.rs  error.rs  fill.rs  gradient.rs  image.rs  intensity.rs  lib.rs  path.rs  path_utils.rs  surface.rs  util.rs
src/breadx/: fallback.rs  image.rs  mod.rs  xrender.rs
src/breadx/xrender/: brushes.rs  image.rs  mod.rs
src/geometry/: angle.rs  arc.rs  curve.rs  mod.rs
src/gl/: dispatch.rs
src/gl/types/: shader.rs  vertex.rs
src/path/: mod.rs
src/surface/: defaults.rs  features.rs  mod.rs  mut_impl.rs
src/yaww/: mod.rs
