[package]
name = "chalkboard"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
breadx = { path="../breadx", optional = true }

# general dependencies
[dependencies]
futures-lite = { version = "1.11", optional = true }
num-traits = "0.2.14"
ordered-float = "2.1"
tinyvec = { version = "1.1", features = ["alloc"] }

[features]
default = ["breadx", "xrender"]
async = ["futures-lite", "breadx/async"]
xrender = ["breadx/render"]
