[package]
name = "chalkboard"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
breadx = { path="../breadx", optional = true }

# general dependencies
[dependencies]
approx = { version = "0.4.0", optional = true }
futures-lite = { version = "1.11", optional = true }
log = "0.4"
num-traits = "0.2.14"
ordered-float = "2.1"
tinyvec = { version = "1.1", features = ["alloc"] }

[features]
default = ["breadx", "gl", "xrender"]
async = ["futures-lite", "breadx/async"]
gl = []
xrender = ["breadx/render", "approx"]
