[package]
name = "chalkboard-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22.7", features = ["libm"], default-features = false }
lyon_geom = { version = "1.0.0", default-features = false }
lyon_path = { version = "1.0.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
