[package]
name = "chalkboard-geometry"
version = "0.1.0"
edition = "2018"
license = "BSL-1.0"
authors = ["notgull <jtnunley01@gmail.com>"]
description = "Geometry primitives for use in chalkboard"
homepage = "https://github.com/bread-graphics/chalkboard#readme"
repository = "https://github.com/bread-graphics/chalkboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22.7", features = ["libm"], default-features = false }
lyon_geom = { version = "1.0.0", default-features = false }
lyon_path = { version = "1.0.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }
